# Scanning-Task

./: .gitignore  Dockerfile  README.md  data.json  main.py  pyproject.toml
scraper_logic/: constants.py  data_extraction.py  main.py  user_scheme.py
