[tool.poetry]
name = "techtask"
version = "0.1.0"
description = ""
authors = ["KateM_zz <zupperu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-playwright = "^0.4.3"
pydentic = "^0.0.1.dev3"
pydantic = {extras = ["email"], version = "^2.4.2"}
black = "^23.10.1"
asyncio = "^3.4.3"


[tool.black]
target-version = ['py311']
include = '\.pyi?$'
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[virtualenvs]
create = false
in-project = true
